<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_controller</name>
  <version>0.0.0</version>
  <description>A package to control the arm via a custom action interface.</description>
  <maintainer email="shengzhegan04@gmail.com">sgan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 构建工具和构建时依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- 运行时依赖 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Python和消息的通用依赖 -->
  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 导出构建类型 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>